# voxtype

./: .gitignore  README.md
docs/releases/: v0.6.6-kde.1.md
extras/kde-listening-overlay/: CMakeLists.txt  IMPLEMENTATION_NOTES.md  README.md
extras/kde-listening-overlay/examples/config/: voxtype-overlay.config.ini.sample  voxtype.config.toml.reference
extras/kde-listening-overlay/examples/kde/: kglobalshortcutsrc.snippet.ini  net.local.voxtype-toggle.desktop
extras/kde-listening-overlay/examples/systemd/: voxtype-listening-overlay.service.reference  voxtype.service.reference  voxtype.service.template
extras/kde-listening-overlay/src/: main.cpp
src/: config.rs  daemon.rs
